# biofabric

./: .gitignore  STATUS.md  docker-compose.yml
auth_service/: Dockerfile  pyproject.toml
auth_service/auth/: app.py  config.py  db.py  security.py
auth_service/auth/api/: router.py  router_admin.py
core_service_mapped/: .env.example  README_core.md  core manual.docx  pyproject.toml  справка по модулю.docx
core_service_mapped/core/: app.py  config.py  db.py
core_service_mapped/core/audit/: router.py
core_service_mapped/core/auth/: jwt_utils.py  router.py
core_service_mapped/core/comments/: router.py
core_service_mapped/core/common/: audit.py  correlation.py  errors.py  logging.py
core_service_mapped/core/deadlines/: router.py
core_service_mapped/core/docs/: router.py  webhook_onlyoffice.py
core_service_mapped/core/health/: router.py
core_service_mapped/core/integrations/: router.py
core_service_mapped/core/jobs/: router.py
core_service_mapped/core/notifications/: router.py
core_service_mapped/core/workflow/: router.py
core_service_mapped/migrations/: README.sql
core_service_mapped/tests/: test_health.py
frontend/: TASKS.md  (+4 more)
marketing_service/: .env.example  Dockerfile  Function-by-Function Notes.md  PLAN.md  README_marketing.md  new_tz.txt  pyproject.toml  ТЗ маркетинг-4.docx  справка.docx
marketing_service/marketing/: app.py  config.py  db.py
marketing_service/migrations/: v8_marketing.sql
marketing_service/schema/: conventions.md  entity_types.md  schema.sql  table_map.yaml
quarantine_animals_service/: .env.example  Dockerfile  README_quarantine.md  new_tz.txt  pyproject.toml  Модуль «Карантинирование животных»-4.docx  справка.docx
quarantine_animals_service/migrations/: v10_quarantine.sql
quarantine_animals_service/quarantine/: app.py  config.py  db.py
quarantine_animals_service/schema/: conventions.md  entity_types.md  schema.sql  table_map.yaml
(+182 files in other folders)
