[project]
name = "marketing_service"
version = "0.1.0"
description = "Marketing module: AI-assisted content planning, calendar, manual publication to TG/VK"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "python-dotenv>=1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
